src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes/Orders</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_City_State_code_PDF__c</fullName>
        <formula>BillingCity + &quot;,&quot;+&quot; &quot;+ BillingState +&quot;,&quot;+&quot; &quot;+ BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <formula>BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name_PDF__c</fullName>
        <formula>BillingName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street_PDF__c</fullName>
        <formula>BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>TEXT(Account__r.Tier_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Vendor_Count__c</fullName>
        <label>Color Vendor Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Color_Vendor__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.Color_Name_Code1__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Name1__c</fullName>
        <formula>HYPERLINK(&quot;https://na5.salesforce.com/&quot; &amp; Opportunity.Primary_Contact__c,  Opportunity.Primary_Contact__r.FirstName+&quot; &quot;+Opportunity.Primary_Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact.FirstName + &quot; &quot;+  Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_to_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert to Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_to_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>$User.FirstName +&quot; &quot; +  $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Behr Rep Mobile number</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity.Id</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <label>OrderID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_per_Gallon__c</fullName>
        <label>Price per Gallon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards__c</fullName>
        <formula>Account__r.Pro_Rewards_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Rewards #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Items__c</fullName>
        <label>Quote Line Items</label>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Ordertype__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote/Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recycling_fee_for_1_Gallon__c</fullName>
        <label>Fee - 1 Gallon</label>
        <summarizedField>QuoteLineItem.Recycling_fee_for_1_Gallon__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recycling_fee_for_5_Gallon__c</fullName>
        <label>Fee - Over 1 Gallon</label>
        <summarizedField>QuoteLineItem.Recycling_fee_for_5_Gallon__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rep_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <formula>CreatedBy.FirstName +&apos; &apos; +  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Phone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_To_HD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To HD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <formula>Opportunity.Street__c +  BR() +
Opportunity.City__c + &apos;,&apos; + &apos; &apos; + Opportunity.State__c + &apos; &apos; + Opportunity.Zipcode__c +  BR() +
Opportunity.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City_State_Code_PDF__c</fullName>
        <formula>ShippingCity +&quot;,&quot;+&quot; &quot;+ ShippingState +&quot;,&quot;+&quot; &quot;+ ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country_PDF__c</fullName>
        <formula>ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name_PDF__c</fullName>
        <formula>ShippingName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_PDF__c</fullName>
        <formula>ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Processing_Instructions__c</fullName>
        <label>Special Processing Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Store1__c</fullName>
        <formula>Store__r.Name  + &quot;-&quot; +  Store__r.Store_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store No</label>
        <referenceTo>Home_Depot_Store__c</referenceTo>
        <relationshipLabel>Strore#</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Total_Template__c</fullName>
        <formula>TotalPrice - Total_Recycling_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>THD_Store__c</fullName>
        <formula>HYPERLINK(&quot;https://na5.salesforce.com/&quot;&amp; Opportunity.THD_Store__c, Opportunity.THD_Store__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>THD Store</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>QuoteLineItem.Quantity</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Recycling_Fee__c</fullName>
        <formula>Recycling_fee_for_1_Gallon__c  +  Recycling_fee_for_5_Gallon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total State Recycling Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Saved__c</fullName>
        <formula>Subtotal  -     TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $Saved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_Of_Order__c</fullName>
        <label>Type Of Order</label>
        <picklist>
            <picklistValues>
                <fullName>Direct to store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_Gallon_Qty__c</fullName>
        <label>1 Gallon Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Gallon__c</fullName>
        <label>1 Gallon</label>
        <summarizedField>QuoteLineItem.X1_Gallon__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X5_Gallon__c</fullName>
        <label>Over 1 Gallon</label>
        <summarizedField>QuoteLineItem.X5_Gallon__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <recordTypes>
        <fullName>Order</fullName>
        <active>true</active>
        <description>Provide users with the ability to place orders in Salesforce.These orders will then be distributed to other systems to allow easier order entry.</description>
        <label>Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote</fullName>
        <active>true</active>
        <label>Quote</label>
    </recordTypes>
    <validationRules>
        <fullName>Phone_Validation</fullName>
        <active>false</active>
        <description>Phone number should be in a specific format.</description>
        <errorConditionFormula>!(REGEX( Phone , &quot;[0-9]{7}&quot;)|| REGEX(  Phone ,&quot;\\([0-9]{3}\\)\\s[0-9]{3}\\-[0-9]{4}&quot;)||ISBLANK(Phone))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please check the phone number you entered.  It should contain 7 or 10 numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_and_Email_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Phone = NULL, 
Email= NULL, 

AND(
OR(ISPICKVAL(Opportunity.StageName,&quot;Recommend&quot;), ISPICKVAL(Opportunity.StageName,&quot;Won/Satisfy&quot;)), 
NOT(CreatedDate = LastModifiedDate ))

)</errorConditionFormula>
        <errorMessage>Please enter Phone number or Email address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ship_to_name_Ship_to_Address_to_fill</fullName>
        <active>true</active>
        <description>Ship to name and Ship to Address to be filled in if Type of Order is Direct to Site.</description>
        <errorConditionFormula>ISPICKVAL( Type_Of_Order__c , &apos;Direct to site&apos;)  &amp;&amp;  (ISBLANK( ShippingPostalCode )  ||  ISBLANK(  ShippingState )  ||  ISBLANK( ShippingName)) &amp;&amp;  $RecordType.Name=&apos;Order&apos;</errorConditionFormula>
        <errorMessage>Please fill Ship to Name and Ship to Address if Type of Order is Direct to Site</errorMessage>
    </validationRules>
</CustomObject>